show time info button, fix playback control wrapping, and fixed legend image url

--- a/mapstory/static/mapstory/less/viewer.less
+++ b/mapstory/static/mapstory/less/viewer.less
@@ -148,7 +148,7 @@ html, body {
 
 
 #slider{
-  width:25%;
+  width:30%;
   margin:0px 10px 0px 10px;
   display:inline-block;
 }
